lb-private/lbprivate-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: private-lb
  namespace: demo
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internal
    alb.ingress.kubernetes.io/target-type: ip
spec:
  rules:
  - http:
      paths:
        - path: /*
          backend:
            serviceName: demo-nodeport-service
            servicePort: 80
